feat: add new map;

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,4 +26,12 @@ target 'MyTestApp' do
   post_install do |installer|
     react_native_post_install(installer)
   end
+  pre_install do |installer|
+    $RNMBGL.pre_install(installer)
+    ... other pre install hooks
+  end
+  post_install do |installer|
+    $RNMBGL.post_install(installer)
+    ... other post install hooks
+  end
 end
